--- a/cpp-labor/lab06/CMakeLists.txt
+++ b/cpp-labor/lab06/CMakeLists.txt
@@ -1,2 +1,2 @@
 project(lab6)
-add_executable(lab6 main_06.cpp Matrix.cpp Matrix.h)
+add_executable(lab6 main_06.cpp Matrix.cpp Matrix.h ../ParcialisC+/Song.cpp ../ParcialisC+/Song.h ../ParcialisC+/Main.cpp)
