--- a/cpp-labor/lab09/CMakeLists.txt
+++ b/cpp-labor/lab09/CMakeLists.txt
@@ -1,2 +1,2 @@
 project(lab9)
-add_executable(lab9 main_09.cpp)
+add_executable(lab9 main_09.cpp Account.h Account.cpp Customer.cpp Customer.h Bank.cpp Bank.h ../lab10/Szemely.cpp ../lab10/Szemely.h ../lab10/Extra/BST.h ../lab10/Extra/Test_BST.cpp ../lab10/Extra/NodeBST.cpp ../lab10/Extra/NodeBST.h)
