--- a/cpp-labor/lab07/CMakeLists.txt
+++ b/cpp-labor/lab07/CMakeLists.txt
@@ -1,2 +1,2 @@
 project(lab7)
-add_executable(lab7 main_07.cpp)
+add_executable(lab7 main_07.cpp User.cpp User.h QuizGame.cpp QuizGame.h Quiz.cpp Quiz.h Question.h Answer.h)
