--- a/cpp-labor/ParcialisC+/CMakeLists.txt
+++ b/cpp-labor/ParcialisC+/CMakeLists.txt
@@ -1,2 +1,2 @@
 project(ParcialisC+)
-add_executable(ParcialisC+ Song.h Song.cpp Main.cpp User.cpp User.h)
+add_executable(ParcialisC+ Song.h Song.cpp Main.cpp User.cpp User.h ../ParcialisD/main.cpp)
